The standard get() methods are now implemented based on the generic method.
By making use of the generic get() conversion method the code size could be
reduced.

git-svn-id: https://svn.apache.org/repos/asf/commons/proper/configuration/trunk@1515449 13f79535-47bb-0310-9956-ffa450edef68